Tela Extrato - INCOMPLETA

--- a/src/app/cliente/extrato/extrato.component.html
+++ b/src/app/cliente/extrato/extrato.component.html
@@ -1,10 +1,32 @@
-<form #formSacar="ngForm">
+<div class="container">
+  <h2>Extrato de Movimentações</h2>
+
+  <!-- Filtros para seleção de datas -->
+  <div class="form-group">
     <label>Data Inicial:</label>
-    <input type="date" id="dataInicial" [(ngModel)]="dataInicial">
-    
+    <input type="date" [(ngModel)]="dataInicial">
+  </div>
+  <div class="form-group">
     <label>Data Final:</label>
-    <input type="date" id="dataFinal" [(ngModel)]="dataFinal">
-    
-    <input type="submit" value="Consultar" (click)="onSubmit">
-  </form>
-  
+    <input type="date" [(ngModel)]="dataFinal">
+  </div>
+  <button (click)="filtrarMovimentacoes()">Filtrar</button>
+
+  <!-- Tabela para exibir as movimentações -->
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Data</th>
+        <th>Tipo</th>
+        <th>Valor</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let movimentacao of movimentacoes">
+        <td>{{ movimentacao.dataHora | date }}</td>
+        <td>{{ movimentacao.type }}</td>
+        <td>{{ movimentacao.value | currency }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
