--- a/src/app/admin/alterar-gerente/alterar-gerente.component.html
+++ b/src/app/admin/alterar-gerente/alterar-gerente.component.html
@@ -1,21 +1,49 @@
-<p>alterar-gerente works!</p>
-<div>
-    <h2>Autocadastro de Cliente</h2>
-    <form (ngSubmit)="alterarGerente()" #formAtualizarGerente="ngForm">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" [(ngModel)]="gerente.nome" required>
-        <br>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" [(ngModel)]="gerente.email" required>
-        <br>
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" [(ngModel)]="gerente.cpf" placeholder="999.999.999-99" maxlength="14"
-            pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" [disabled]="true" required appCpfFormat />
-        <br>
-        <label for="telefone">Telefone:</label>
-        <input type="text" id="telefone" name="telefone" [(ngModel)]="gerente.telefone" placeholder="(00) 00000-0000"
-            maxlength="15" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" required appTelefoneFormat />
-        <br>
-        <button type="submit" [disabled]="!formAtualizarGerente.valid">Alterar Gerente</button>
-    </form>
-</div>
+<section class="vh-90 gradient-custom">
+    <div class="container py-5 vh-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                    <div class="card-body p-5">
+                        <form (ngSubmit)="alterarGerente()" #formAtualizarGerente="ngForm">
+                            <div class="mb-md-1 mt-md-1 pb-2">
+                                <h2 class="fw-bold mb-2">Alterar Gerente</h2>
+
+                                <div class="form-outline form-white mb-3">
+                                    <label class="form-label" for="nome">Nome</label>
+                                    <input class="form-control" type="text" id="nome" name="nome"
+                                        [(ngModel)]="gerente.nome" required>
+                                </div>
+                                <div class="form-outline form-white mb-3">
+                                    <label class="form-label" for="email">E-mail:</label>
+                                    <input class="form-control" type="email" id="email" name="email"
+                                        [(ngModel)]="gerente.email" required>
+                                </div>
+                                <div class="form-outline form-white mb-3">
+                                    <label class="form-label" for="cpf">CPF:</label>
+                                    <input class="form-control" type="text" id="cpf" name="cpf"
+                                        [(ngModel)]="gerente.cpf" placeholder="999.999.999-99" maxlength="14"
+                                        pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" [disabled]="true" required appCpfFormat />
+                                </div>
+                                <div class="form-outline form-white mb-3">
+                                    <label class="form-label" for="telefone">Telefone:</label>
+                                    <input class="form-control" type="text" id="telefone" name="telefone"
+                                        [(ngModel)]="gerente.telefone" placeholder="(00) 00000-0000" maxlength="15"
+                                        pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" required appTelefoneFormat />
+                                </div>
+                                <div class="form-outline form-white mb-2 text-center">
+                                    <a class="btn btn-secondary me-3" href="#" routerLink="/manutencao-admin">
+                                        Voltar
+                                    </a>
+                                    <button class="btn btn-outline-light" type="submit"
+                                    [disabled]="!formAtualizarGerente.valid || !formAtualizarGerente.dirty">Alterar Gerente</button>
+                                    
+                                        
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
