--- a/src/app/admin/home-admin/home-admin.component.html
+++ b/src/app/admin/home-admin/home-admin.component.html
@@ -1,23 +1,26 @@
 <div *ngIf="verifyLogin(); else erro">
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Total de Clientes</th>
-                    <th>Saldo positivo totalizado</th>
-                    <th>Saldo negativo totalizado</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let gerente of gerentes">
-                    <td>{{ gerente.nome }}</td>
-                    <td >{{ getTotalClientes(gerente.id) }}</td>
-                    <td >{{ formatCurrency(getTotalPositivo(gerente.id)) }}</td>
-                    <td >{{ formatCurrency(getTotalNegativo(gerente.id)) }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="border bg-dark rounded-4 p-4" style="width:50%;">
+            <h2 class=" fw-bold text-white">Home Administrador</h2>
+            <table class="table table-striped table-dark">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Total de Clientes</th>
+                        <th>Saldo positivo totalizado</th>
+                        <th>Saldo negativo totalizado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let gerente of gerentes">
+                        <td>{{ gerente.nome }}</td>
+                        <td>{{ getTotalClientes(gerente.id) }}</td>
+                        <td>{{ formatCurrency(getTotalPositivo(gerente.id)) }}</td>
+                        <td>{{ formatCurrency(getTotalNegativo(gerente.id)) }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
