--- a/src/app/admin/manutencao-admin/manutencao-admin.component.html
+++ b/src/app/admin/manutencao-admin/manutencao-admin.component.html
@@ -1,32 +1,40 @@
-<p>manutencao-admin works!</p>
 <div *ngIf="verifyLogin(); else erro">
-    <button routerLink="/inserir-gerente">Inserir Gerentes</button>
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                    <th>E-mail</th>
-                    <th>Telefone</th>
-                    <th>Alterar</th>
-                    <th>Excluir</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let gerente of gerentes">
-                    <td>{{ gerente.nome }}</td>
-                    <td appCpfFormat>{{ gerente.cpf }}</td>
-                    <td >{{ gerente.email }}</td>
-                    <td appTelefoneFormat>{{ gerente.telefone}}</td>
-                    <td ><button (click)="alteraGerente(gerente)" >Icone</button></td>
-                    <td ><button [disabled]="isDeleteValid" (click)="excluirGerente(gerente)">Icone</button></td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="border bg-dark rounded-4 p-4" style="width:50%;">
+            <button class="btn btn-success" routerLink="/inserir-gerente">Inserir Gerentes <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+              </svg></button>
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>E-mail</th>
+                        <th>Telefone</th>
+                        <th>Alterar</th>
+                        <th>Excluir</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let gerente of gerentes">
+                        <td>{{ gerente.nome }}</td>
+                        <td appCpfFormat>{{ gerente.cpf }}</td>
+                        <td>{{ gerente.email }}</td>
+                        <td appTelefoneFormat>{{ gerente.telefone }}</td>
+                        <td><button class="btn btn-warning rounded-circle" (click)="alteraGerente(gerente)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-pen-fill" viewBox="0 0 16 16">
+                            <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z"/>
+                          </svg></button></td>
+                        <td><button class="btn btn-danger rounded-circle" [disabled]="isDeleteValid"
+                                (click)="excluirGerente(gerente)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+                                  </svg></button></td>
+                    </tr>
+                </tbody>
+            </table>
+            <button class="btn btn-secondary" routerLink="/home-admin">Voltar</button>
+        </div>
     </div>
-    <button routerLink="/home-admin">Voltar</button>
+
 </div>
 
 <ng-template #erro>
