--- a/src/app/admin/relatorio-clientes/relatorio-clientes.component.html
+++ b/src/app/admin/relatorio-clientes/relatorio-clientes.component.html
@@ -1,35 +1,35 @@
-<p>relatorio-clientes works!</p>
 <div *ngIf="verifyLogin(); else erro">
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                    <th>Limite</th>
-                    <th>Gerente</th>
-                    <th>Saldo</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let cliente of clientes">
-                    <td>{{cliente.nome}}</td>
-                    <td>{{cliente.cpf}}</td>
-                    <td>{{formatCurrency(buscaLimiteConta(cliente))}}</td>
-                    <td>{{ buscaGerenteCliente(cliente)}}</td>
-                    <td>{{ formatCurrency(buscaSaldoConta(cliente))}}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="border bg-dark rounded-4 p-4" style="width:50%;">
+            <h2 class=" fw-bold text-white">Relatório Clientes</h2>
+            <table class="table table-striped table-dark">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>Limite</th>
+                        <th>Gerente</th>
+                        <th>Saldo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let cliente of clientes">
+                        <td>{{cliente.nome}}</td>
+                        <td>{{cliente.cpf}}</td>
+                        <td>{{formatCurrency(buscaLimiteConta(cliente))}}</td>
+                        <td>{{buscaGerenteCliente(cliente)}}</td>
+                        <td>{{formatCurrency(buscaSaldoConta(cliente))}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        <button routerLink="/home-admin" class="btn btn-secondary">Voltar</button>
     </div>
-    <button routerLink="/home-admin">Voltar</button>
+    </div>
 </div>
 
+5
 <ng-template #erro>
     <span>
         Erro: Você não tem permissão para acessar esta página.
     </span>
 </ng-template>
-
-
-
