--- a/src/app/gerente/lista-clientes/lista-clientes.component.html
+++ b/src/app/gerente/lista-clientes/lista-clientes.component.html
@@ -4,31 +4,40 @@
   <input type="text" class="form-control" [(ngModel)]="consulta" (input)="filtrarClientes()" placeholder="Pesquisar por nome ou CPF">
 
 </div>
-  <div>
-        <table class="table mt-4">
-            <thead class="">
-              <tr>
-                <th scope="col">CPF</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Cidade</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Saldo</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr scope="row" *ngFor="let cliente of clientesFiltrados">
-                <td class="link-style">
-                  <a *ngIf="cliente.id" [routerLink]="['/detalhe-cliente', cliente.id]">{{ cliente.cpf }}</a>
-                </td>                
-                <td>{{ cliente.nome }}</td>
-                <td>{{ cliente.endereco.cidade }}</td>
-                <td>{{ cliente.endereco.estado }}</td>
-                <td>{{ buscaSaldoConta(cliente).saldo}}</td>
-               
-              </tr>
-            </tbody>
-          </table>
-
+  <div *ngIf="loading == true">
+    <div class=" text-center vh-100">
+      <strong role="status">
+        <div class="spinner-border ms-3" style="width: 3rem; height: 3rem;" aria-hidden="true"></div>
+      </strong>
     </div>
+  </div>
+
+  <div *ngIf="clientesFiltrados.length>0">
+    <table class="table mt-4">
+      <thead class="">
+        <tr>
+          <th scope="col">CPF</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Cidade</th>
+          <th scope="col">Estado</th>
+          <th scope="col">Saldo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="row" *ngFor="let cliente of clientesFiltrados">
+          <td class="link-style">
+            <a *ngIf="cliente.id" [routerLink]="['/detalhe-cliente', cliente.id]">{{ cliente.cpf }}</a>
+          </td>                
+          <td>{{ cliente.nome }}</td>
+          <td>{{ cliente.endereco.cidade }}</td>
+          <td>{{ cliente.endereco.estado }}</td>
+          <td>{{ buscaSaldoConta(cliente).saldo}}</td>
+          
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+    
 </div>
 
