--- a/src/app/gerente/pesquisar-cliente/pesquisar-cliente.component.html
+++ b/src/app/gerente/pesquisar-cliente/pesquisar-cliente.component.html
@@ -1,11 +1,12 @@
 <div class="container mt-5">
   <h2>Cliente Detalhado</h2>
   <div class="input-group mt-4">
-    <input type="text" class="form-control" [(ngModel)]="consulta" placeholder="Pesquisar por nome ou CPF">
-    <button class="btn btn-dark" (click)="listarTodos()">Buscar</button>
+    <input class="form-control" type="text" class="form-control" [(ngModel)]="consulta"  maxlength="14"
+    pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" appCpfFormat placeholder="Pesquisar por CPF">
+    <button class ="btn btn-dark" [disabled]="!consulta || removeMascara(consulta).length != 11" (click)="listarTodos()">Buscar</button>
   </div>
 
-  <div class="table-responsive mt-4">
+  <div class="table-responsive mt-4" *ngIf="clientes">
     <table class="table">
       <thead>
         <tr>
@@ -40,5 +41,16 @@
         </tr>
       </tbody>
     </table>
+  </div>
+  <div *ngIf="clientes && clientes.length === 0 && loading == false">
+      <p>Nenhum cliente</p>
+  </div>
+
+  <div *ngIf="loading == true">
+    <div class=" text-center vh-100">
+      <strong role="status">
+        <div class="spinner-border ms-3" style="width: 3rem; height: 3rem;" aria-hidden="true"></div>
+      </strong>
+    </div>
   </div>
 </div>
