novo endpoint, mudança css telas gerente

--- a/src/app/cliente/extrato/extrato.component.html
+++ b/src/app/cliente/extrato/extrato.component.html
@@ -19,13 +19,27 @@
         <th>Data</th>
         <th>Tipo</th>
         <th>Valor</th>
+        <th>Conta Origem</th>
+        <th>Conta Destino</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let movimentacao of movimentacoes">
-        <td>{{ movimentacao.dataHora | date }}</td>
+        <td>{{ convertData(movimentacao.dataHora) }}</td>
         <td>{{ movimentacao.type }}</td>
         <td>{{ movimentacao.value | currency }}</td>
+        <td *ngIf="movimentacao.conta_id != conta.id">{{movimentacao.conta_id}}</td>
+        <td *ngIf="movimentacao.conta_id != conta.id">{{movimentacao.conta_id}}</td>
+
+        <!-- {
+          "dataHora": "2023-09-26T00:31:01.530Z",
+          "type": "TRANSFERENCIA",
+          "value": 15,
+          "conta_id": 1,
+          "conta_destiny": 2,
+          "id": 41
+      } -->
+
       </tr>
     </tbody>
   </table>
